--- a/entry/main/index.html
+++ b/entry/main/index.html
@@ -4,11 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>PenDown</title>
 </head>
 <body>
   <div id="app"></div>
-  <div class="footer">footer</div>
   <script src="../../build/renders/main/index.bundle.js"></script>
 </body>
 </html>
